--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "scripts/shared"]
-	path = scripts/shared
-	url = https://github.com/HotelistanMarketing/shared-scripts
+[submodule "commons"]
+	path = commons
+	url = https://github.com/HotelistanMarketing/commons
