--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,6 +1,8 @@
-http {
-	gzip on;
-	gzip_comp_level 2;
-	gzip_min_length 512;
-	gzip_proxied any; # Heroku router sends Via header
+location / {
+    index  index.php index.html index.htm;
+}
+
+# for people with app root as doc root, restrict access to a few things
+location ~ ^/(composer\.(json|lock|phar)$|Procfile$|<?=getenv('COMPOSER_VENDOR_DIR')?>/|<?=getenv('COMPOSER_BIN_DIR')?>/) {
+    deny all;
 }
