--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,3 +1,13 @@
+daemon off;
+
+worker_processes auto;
+
+error_log stderr;
+
+events {
+	worker_connections 1024;
+}
+
 location / {
     index  index.php index.html index.htm;
 }
