--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -77,7 +77,7 @@ http {
 		error_log stderr;
 		access_log /tmp/heroku.nginx_access.<?=getenv('PORT')?:'8080'?>.log;
 
-		include "<?=getenv('HEROKU_PHP_NGINX_CONFIG_INCLUDE')?>";
+		#include "<?=getenv('HEROKU_PHP_NGINX_CONFIG_INCLUDE')?>";
 
 		# restrict access to hidden files, just in case
 		location ~ /\. {
