Fix nginx location regex

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,6 @@ location / {
 }
 
 # with app root as doc root, restrict access to development files
-location ~ ^/(composer\.(json|lock|phar)$|vendor|styles/) {
+location ~ ^/(composer\.(json|lock|phar)|vendor|styles/) {
     deny all;
 }
