Test new page structure

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,3 +6,7 @@ location / {
 location ~ ^/(composer\.(json|lock|phar)|vendor|styles/) {
     deny all;
 }
+
+location ~ ^/(dental-implant-.*)/ {
+    alias pages/$1;
+}
