Test new page structure

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,5 +8,5 @@ location ~ ^/(composer\.(json|lock|phar)|vendor|styles/) {
 }
 
 location ~ ^/(dental-implant-.*)/ {
-    alias pages/$1;
+    rewrite $1 /pages/$1 last;
 }
