Test new page structure further

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,6 @@ location ~ ^/(composer\.(json|lock|phar)|vendor|styles/) {
     deny all;
 }
 
-location ~ ^/(dental-implant-.*)/ {
+location / {
     rewrite ^/(.*)$ /pages/$1 last;
 }
