Prevent access to more dev files

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,11 @@ location / {
 }
 
 # with app root as doc root, restrict access to development files
-location ~ ^/(composer\.(json|lock|phar)|vendor|styles/) {
+location ~ ^/(composer\.(json|lock|phar)/) {
+    deny all;
+}
+
+location ~ .(less|md)$ {
     deny all;
 }
 
