--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,7 @@ location ~ .(less|md)$ {
     deny all;
 }
 
-location / {
+# Internally redirect all slugs (everything does not contain dots!) to pages/
+location ~ ^/((?!\.).)*$ {
     rewrite ^/(.*)$ /pages/$1 last;
 }
