--- a/nginx.conf
+++ b/nginx.conf
@@ -13,5 +13,5 @@ location ~ .(less|md)$ {
 
 # Internally redirect all slugs (everything does not contain dots!) to pages/
 location ~ ^/((?!\.).)*$ {
-    rewrite ^/(.*)$ /pages/$1 last;
+    rewrite ^/(.*)$ /pages/$1 break;
 }
