Try to fix redirect loop

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,15 @@ location / {
     index  index.php index.html index.htm;
 }
 
+location ~ ^/pages/ {
+    # do nothing!
+}
+
+# Internally redirect all slugs (everything does not contain dots!) to pages/
+location ~ ^/((?!\.).)*$ {
+    rewrite ^/(.*)$ /pages/$1 break;
+}
+
 # with app root as doc root, restrict access to development files
 location ~ ^/(composer\.(json|lock|phar)/) {
     deny all;
@@ -9,9 +18,4 @@ location ~ ^/(composer\.(json|lock|phar)/) {
 
 location ~ .(less|md)$ {
     deny all;
-}
-
-# Internally redirect all slugs (everything does not contain dots!) to pages/
-location ~ ^/((?!\.).)*$ {
-    rewrite ^/(.*)$ /pages/$1 break;
 }
