--- a/nginx.conf
+++ b/nginx.conf
@@ -12,10 +12,6 @@ location ~ ^/((?!\.).)*$ {
 }
 
 # with app root as doc root, restrict access to development files
-location ~ ^/(composer\.(json|lock|phar)/) {
-    deny all;
-}
-
-location ~ .(less|md)$ {
+location ~ ^/(composer\.(json|lock|phar)|.(less|md)$) {
     deny all;
 }
