--- a/nginx.conf
+++ b/nginx.conf
@@ -8,10 +8,13 @@ location ~ ^/pages/ {
 
 # Internally redirect all slugs (everything does not contain dots!) to pages/
 location ~ ^/((?!\.).)*$ {
-    rewrite ^/(.*)$ /pages/$1 break;
+    rewrite ^/(.*)$ /pages/$1 redirect;
 }
 
-# with app root as doc root, restrict access to development files
-location ~ ^/(composer\.(json|lock|phar)|.(less|md)$) {
+location ~ ^/composer\.(json|lock|phar) {
+    deny all;
+}
+
+location ~ .(less|md)$ {
     deny all;
 }
