--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,9 @@ location / {
     index  index.php index.html index.htm;
 }
 
-location ~ ^/pages/ {
+# location ~ ^/pages/ {
     # do nothing!
-}
+# }
 
 # Internally redirect all slugs (everything does not contain dots!) to pages/
 location ~ ^/((?!\.).)*$ {
