--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
 location / {
-    index  index.php index.html index.htm;
+    index index.php index.html index.htm;
 }
 
-# location ~ ^/pages/ {
-    # do nothing!
-# }
+location ~ ^/pages/ {
+    index index.php;
+}
 
 # Internally redirect all slugs (everything does not contain dots!) to pages/
 location ~ ^/((?!\.).)*$ {
-    rewrite ^/(.*)$ /pages/$1 redirect;
+    rewrite ^/(.*)$ /pages/$1 break;
 }
 
 location ~ ^/composer\.(json|lock|phar) {
