--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ location / {
 }
 
 location ~ ^/pages/ {
-    index index.php;
+    rewrite ^ index.php break;
 }
 
 # Internally redirect all slugs (everything does not contain dots!) to pages/
