--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ location / {
 }
 
 location ~ ^/pages/ {
-    rewrite ^ index.php break;
+    allow all;
 }
 
 # Internally redirect all slugs (everything does not contain dots!) to pages/
