Try to fix server redirect errors

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,8 @@ location / {
     index index.php index.html index.htm;
 }
 
-location ~ ^/pages/ {
-    allow all;
-}
-
 # Internally redirect all slugs (everything does not contain dots!) to pages/
-location ~ ^/((?!\.).)*$ {
+location ~ ^/(?!pages/)((?!\.).)*$ {
     rewrite ^/(.*)$ /pages/$1 break;
 }
 
