Correct broken CSS paths with redirect

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,10 @@ location / {
     location ~ ^/(?!pages/)((?!\.).)*$ {
         rewrite ^/(.*)$ /pages/$1 break;
     }
+    
+    location ~ .css$ {
+        rewrite ^/(.*)$ /pages/$1 break;
+    }
 }
 
 location ~ ^/composer\.(json|lock|phar) {
