Add Heroku Procfile

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,8 @@ location / {
     }
 }
 
-location ~ ^/composer\.(json|lock|phar) {
+# for people with app root as doc root, restrict access to a few things
+location ~ ^/(composer\.(json|lock|phar)$|Procfile$|<?=getenv('COMPOSER_VENDOR_DIR')?>/|<?=getenv('COMPOSER_BIN_DIR')?>/) {
     deny all;
 }
 
