--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ location / {
 }
 
 # for people with app root as doc root, restrict access to a few things
-location ~ ^/(composer\.(json|lock|phar)$|Procfile$|<?=getenv('COMPOSER_VENDOR_DIR')?>/|<?=getenv('COMPOSER_BIN_DIR')?>/) {
+location ~ ^/(composer\.(json|lock|phar)$|Procfile$) {
     deny all;
 }
 
