Try fixing internal redirect

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,11 +3,11 @@ location / {
 
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.*)$ /pages/$1 break;
+        rewrite ^/(.+)$ /pages/$1 last;
     }
     
     location ~ .css$ {
-        rewrite ^/(.*)$ /pages/$1 break;
+        rewrite ^/(.*)$ /pages/$1 last;
     }
 }
 
