--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,13 @@ location / {
 
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)$ /pages/$1 last;
+        rewrite ^/(.+)$ /pages/$1;
+        rewrite ^/(.+\.css)$ /pages/$1 last;
     }
     
-    location ~ .css$ {
-        rewrite ^/(.*)$ /pages/$1 last;
-    }
+#     location ~ .css$ {
+#         rewrite ^/(.*)$ /pages/$1 last;
+#     }
 }
 
 # for people with app root as doc root, restrict access to a few things
