--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
 location / {
     index index.php index.html index.htm;
 
+    location ~ \.css$ {
+        rewrite ^/(.+\.css)$ /pages/$1;
+    }
+
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)$ /pages/$1;
-    }
-    
-    location ~ \.css$ {
         rewrite ^/(.+)$ /pages/$1 last;
     }
 }
