--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
 location / {
     index index.php index.html index.htm;
 
-    location ~ \.css$ {
-        rewrite ^/(.+\.css)$ /pages/$1;
-    }
-
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)$ /pages/$1 last;
+        rewrite ^/(.+)$ /pages/$1 break;
     }
+}
+
+location ~ ^/(?!pages/)(.+\.css)$ {
+    alias /pages/$2;
 }
 
 # for people with app root as doc root, restrict access to a few things
@@ -16,6 +16,6 @@ location ~ ^/(composer\.(json|lock|phar)$|Procfile$) {
     deny all;
 }
 
-location ~ .(less|md)$ {
+location ~ \.(less|md)$ {
     deny all;
 }
