--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,12 @@ location / {
 
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)$ /pages/$1 break;
+        rewrite ^/(.+)$ /pages/$1 last;
     }
-}
 
-location ~ ^/(?!pages/)(.+\.css)$ {
-    alias /pages/$2;
+    location ~ ^/(?!pages/)(.+\.css)$ {
+        alias /pages/$2;
+    }
 }
 
 # for people with app root as doc root, restrict access to a few things
