Fix style redirect

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ location / {
     }
 
     location ~ ^/(?!pages/)(.+\.css)$ {
-        alias /pages/$2;
+        rewrite ^/(.+)$ /pages/$1 break;
     }
 }
 
