Try fixing redirects not ending with a slash

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,14 @@
 location / {
     index index.php index.html index.htm;
 
+    # Internally redirect all slugs (everything does not contain dots!) to pages/
+    location ~ ^/(?!pages/)((?!\.).)*$ {
+        rewrite ^/(.+)$ /pages/$1/ last;
+    }
+
     location ~ ^/(?!pages/)(.+\.css)$ {
         rewrite ^/(.+)$ /pages/$1 break;
     }
-}
-
-# Internally redirect all slugs (everything does not contain dots!) to pages/
-location ~ ^/(?!pages/)((?!\.).)*$ {
-    index index.php index.html index.htm;
-
-    rewrite ^/(.+)$ /pages/$1 last;
 }
 
 # for people with app root as doc root, restrict access to a few things
