--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,8 @@ location / {
 
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)$ /pages/$1/ last;
+        #rewrite ^/(.+)$ /pages/$1/ last;
+        alias /pages/$2;
     }
 
     location ~ ^/(?!pages/)(.+\.css)$ {
