--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,13 @@
 location / {
     index index.php index.html index.htm;
 
+    location = /dental-implant-turkiye {
+        alias /pages/dental-implant-turkiye;
+    }
+
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        #rewrite ^/(.+)$ /pages/$1/ last;
-        alias /pages/$2;
+        rewrite ^/(.+)$ /pages/$1 break;
     }
 
     location ~ ^/(?!pages/)(.+\.css)$ {
