--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 
 location = /dental-implant-turkiye {
-    alias /pages/dental-implant-turkiye/;
+    rewrite /dental-implant-turkiye /pages/dental-implant-turkiye break;
 }
 
 location / {
