--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ location / {
 
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)$ /pages/$1 break;
+        rewrite ^/(.+)/?$ /pages/$1/ break;
     }
 
     location ~ ^/(?!pages/)(.+\.css)$ {
