Cleanup and test...

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,15 @@
 
-location = /dental-implant-turkiye {
-    rewrite /dental-implant-turkiye /pages/dental-implant-turkiye break;
-}
-
 location / {
     index index.php index.html index.htm;
+
+    location ~ ^/(?!pages/)(.+\.css)$ {
+        rewrite ^/(.+)$ /pages/$1;
+    }
 
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
         rewrite ^/(.+)/?$ /pages/$1/ break;
     }
-}
-
-location ~ ^/(?!pages/)(.+\.css)$ {
-    rewrite ^/(.+)$ /pages/$1 break;
 }
 
 # for people with app root as doc root, restrict access to a few things
