Add server level expires headers for assets

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,14 @@ location / {
     }
 }
 
+# Add expires headers for assets
+location ~* \.(jpg|jpeg|png|svg|gif|ico)$ {
+    expires 1y;
+    etag off;
+    if_modified_since off;
+    add_header Cache-Control "public, no-transform";
+}
+
 # for people with app root as doc root, restrict access to a few things
 location ~ ^/(composer\.(json|lock|phar)$|Procfile$) {
     deny all;
