--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,14 @@
 location / {
     index index.php index.html index.htm;
 
-    location ~ ^/(?!pages/)(.+\.css)$ {
-        rewrite ^/(.+)$ /pages/$1;
-    }
-
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)/?$ /pages/$1/ break;
+        rewrite ^/(.+)/?$ /pages/$1/ last;
     }
+}
+
+location ~ ^/(?!pages/)(.+\.css)$ {
+    alias /pages/$2;
 }
 
 # Add expires headers for assets
