Add missing WebP extension to expires headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ location ~ ^/(?!pages/)(.+\.css)$ {
 }
 
 # Add expires headers for assets
-location ~* \.(jpg|jpeg|png|svg|gif|ico)$ {
+location ~* \.(webp|svg|jpg|jpeg|png|gif|ico)$ {
     expires 1y;
     etag off;
     if_modified_since off;
