--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@
 location / {
     index index.php index.html index.htm;
 
-    location ~ ^/(?!pages/)(.+\.css)$ {
-        rewrite ^/(.+)$ /pages/$1;
+    location ~ (.+\.css)$ {
+        rewrite /?(.+)$ /pages/$1;
     }
 
     # Internally redirect all slugs (everything does not contain dots!) to pages/
