--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,14 @@
 location / {
     index index.php index.html index.htm;
 
-    location ~ (.+\.css)$ {
-        rewrite /?(.+)$ /pages/$1;
-    }
-
     # Internally redirect all slugs (everything does not contain dots!) to pages/
     location ~ ^/(?!pages/)((?!\.).)*$ {
         rewrite ^/(.+)/?$ /pages/$1/ break;
     }
+}
+
+location ~ \.css$ {
+    rewrite /?(.+)$ /pages/$1 break;
 }
 
 # Add expires headers for assets
