--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ location / {
 }
 
 location ~ \.css$ {
-    rewrite /?(.+)$ /pages/$1 break;
+    rewrite /?(.+)$ /pages/$uri/$1 break;
 }
 
 # Add expires headers for assets
