Fix failed deployment caused by "Kinsta won't respect buildpack order"

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-dependency-installer",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "postinstall": "cd commons/devtools && chmod +x run-lessc.sh && ./run-lessc.sh"
+  },
   "dependencies": {
     "less": ">=4.2.0",
     "less-plugin-clean-css": ">=1.5.1"
