--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
   "require": {
     "php": "~8.2",
     "oomphinc/composer-installers-extender": "^2.0",
-    "hotelistan/commons": "dev-main",
-    "ext-curl": "*"
+    "hotelistan/commons": "dev-main"
   },
   "extra": {
     "installer-types": ["library"],
