Test setting a root path instead of redirect rules

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 
 location / {
+    root /pages/
     index index.php index.html index.htm;
 
     gzip on;
@@ -31,11 +32,6 @@ location / {
       text/javascript
       text/plain
       text/xml;
-
-    # Internally redirect all slugs (everything does not contain dots!) to pages/
-    location ~ ^/(?!pages/)((?!\.).)*$ {
-        rewrite ^/(.+)/?$ /pages/$1/ break;
-    }
 }
 
 # Add expires headers for assets
