--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,35 @@
 {
-  "repositories": [
-    {
-      "url": "https://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@github.com/HotelistanMarketing/commons",
-      "type": "git"
-    }
-  ],
-  "require": {
-    "php": "~8.2",
-    "oomphinc/composer-installers-extender": "^2.0",
-    "hotelistan/commons": "dev-main"
-  },
-  "extra": {
-    "installer-types": ["library"],
-    "installer-paths": {
-      "{$name}": ["hotelistan/commons"]
-    }
-  },
-  "config": {
-    "allow-plugins": {
-      "composer/installers": true,
-      "oomphinc/composer-installers-extender": true
-    }
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "chmod +x ./commons/devtools/run-lessc.sh",
-      "./commons/devtools/run-lessc.sh"
-    ]
-  }
+     "repositories": [
+          {
+               "url": "https://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@github.com/HotelistanMarketing/commons",
+               "type": "git"
+          }
+     ],
+     "require": {
+          "php": "~8.2",
+          "oomphinc/composer-installers-extender": "^2.0",
+          "hotelistan/commons": "dev-main"
+     },
+     "extra": {
+          "installer-types": [
+               "library"
+          ],
+          "installer-paths": {
+               "{$name}": [
+                    "hotelistan/commons"
+               ]
+          }
+     },
+     "config": {
+          "allow-plugins": {
+               "composer/installers": true,
+               "oomphinc/composer-installers-extender": true
+          }
+     },
+     "scripts": {
+          "post-install-cmd": [
+               "chmod +x ./commons/devtools/run-lessc.sh",
+               "./commons/devtools/run-lessc.sh"
+          ]
+     }
 }
