--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "dependencies": {
     "less": ">=4.2.0",
     "less-plugin-clean-css": ">=1.5.1"
+  },
+  "devDependencies": {
+    "gulp": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.2"
   }
 }
