--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-order": "^1.2.0",
     "gulp-uglify": "^3.0.2"
   }
 }
