Add build script for compiling Less to CSS and minifying JavaScript
- Created a new script `build-css.sh` to automate the process of compiling .less files located in the `variants` and `pages` directories into .css files using `lessc`.
- Integrated Gulp task to minify JavaScript files after the CSS build process.
- Added a new icon file `telegram-temp.ico` with binary data.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gulp-cli": "^3.1.0",
     "less": ">=4.2.0",
     "less-plugin-clean-css": ">=1.5.1"
   },
