Fix Telegram link comment typo in Russian implant variant configuration

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
      "repositories": [
           {
-               "url": "https://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@github.com/HotelistanMarketing/commons",
+               "url": "https://github.com/HotelistanMarketing/commons",
                "type": "git"
           }
      ],
