--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,9 @@
           }
      },
      "scripts": {
+          "post-install-cmd": [
+               "chmod +x ./commons/devtools/run-lessc.sh",
+               "./commons/devtools/run-lessc.sh"
+          ]
      }
 }
