Restore post-install scripts for CSS compilation

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
      "repositories": [
           {
-               "url": "https://github.com/HotelistanMarketing/commons",
+               "url": "https://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github.com/HotelistanMarketing/commons",
                "type": "git"
           }
      ],
